--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -11,7 +11,7 @@ stf-section-navbar-body {
       margin-bottom: rhythm(2);
 
       & > :first-child {
-        width: 160px;
+        width: rhythm(20);
       }
 
       & > :last-child {
