--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -4,7 +4,7 @@
                  [title]="connector.title"
                  [logo]="connector.logo"
                  [description]="connector.description"
-                 (click)="onSelectConnector(connector.id)"></nde-connector>
+                 (selectConnector)="onSelectConnector(connector.id)"></nde-connector>
 </div>
 <form *ngIf="!!fields && !!form"
       [formGroup]="form"
