--- a/apps/desktop/src/app/upload/steps/steps.component.html
+++ b/apps/desktop/src/app/upload/steps/steps.component.html
@@ -1,10 +1,13 @@
 <div class="steps">
-  <div class="step"
-       *ngFor="let step of steps; let i = index;"
+  <div *ngFor="let step of steps; let i = index; let count=count; let last=last"
+       class="step"
        [class.active]="i === currentStep"
        [class.done]="i < currentStep">
-    <div class="bullet"></div>
+    <div class="bullet" [class.last-bullet]="i === count - 2">
+      <pa-icon *ngIf="i === count - 2" size="large" path="assets/rocket.svg"></pa-icon>
+    </div>
     <div [class.clickable]="i < currentStep"
+         [class.last]="last"
          (click)="goToStep(i)">{{ step | translate }}</div>
   </div>
 </div>
