[sc-2088] and [sc-2029] desktop improvements (#172)
* Fix upload form submission

Move buttons into the form: submit button need to be wrapped into the corresponding form to work

* Fix [sc-2088]: disable upload for kb without write permission

* Fix Desktop application name: missing space

* [sc-2029]: Add switch account option in user menu

Replace user initials component by Pastanaga Avatar
Replace CDK overlay menu by Pastanaga dropdown

* [sc-2029]: Replace folder image

Update the source integration page layout following the last version of figma and using pa-card

* [sc-2029]: Add a rocket to the upload steps

* Fix unit tests

--- a/apps/desktop/src/app/connectors/connector/connector.component.html
+++ b/apps/desktop/src/app/connectors/connector/connector.component.html
@@ -1,10 +1,7 @@
-<div class="connector">
-  <div class="logo">
-    <img [src]="logo"
-         [alt]="title + ' logo'">
+<pa-card (cardClick)="selectConnector.emit($event)">
+  <div class="connector" (click)="selectConnector.emit($event)">
+    <img [src]="logo" [alt]="title + ' logo'">
+    <div>{{title}}</div>
   </div>
-  <div>
-    <div class="title-s">{{ title }}</div>
-    <div>{{ description }}</div>
-  </div>
-</div>
+</pa-card>
+
