Display connector list while showing fields

--- a/apps/desktop/src/app/connectors/connector/connector.component.html
+++ b/apps/desktop/src/app/connectors/connector/connector.component.html
@@ -1,4 +1,5 @@
-<pa-card (cardClick)="selectConnector.emit($event)">
+<pa-card [class.selected]="selected"
+         (cardClick)="selectConnector.emit($event)">
   <div class="connector" (click)="selectConnector.emit($event)">
     <img [src]="logo" [alt]="title + ' logo'">
     <div>{{title}}</div>
