--- a/apps/desktop/src/app/connectors/connector/connector.component.scss
+++ b/apps/desktop/src/app/connectors/connector/connector.component.scss
@@ -2,6 +2,10 @@
 
 pa-card {
   margin-right: rhythm(4);
+
+  &.selected ::ng-deep .pa-card-wrapper {
+    border-color: $color-primary-regular;
+  }
 }
 
 .connector {
