--- a/apps/desktop/src/app/connectors/connectors.component.scss
+++ b/apps/desktop/src/app/connectors/connectors.component.scss
@@ -10,9 +10,27 @@
 .field {
   margin-bottom: rhythm(2);
 }
+
+.select-field-container {
+  display: flex;
+  margin-bottom: $margin-bottom-field;
+
+  pa-select {
+    flex: 1 0 auto;
+
+    ::ng-deep .pa-field{
+      margin-bottom: 0;
+    }
+  }
+  pa-button {
+    margin-left: rhythm(2);
+  }
+}
+
 .buttons {
   display: flex;
   justify-content: center;
+  margin-top: rhythm(5);
 
   pa-button {
     margin: 0 rhythm(1);
