--- a/apps/dashboard/src/app/select/select-kb/select-kb.component.scss
+++ b/apps/dashboard/src/app/select/select-kb/select-kb.component.scss
@@ -5,97 +5,97 @@
 }
 
 .select-kb {
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  &-header {
+
+  .select-kb-header {
+    border-bottom: 1px solid $color-neutral-regular;
+    flex: 0 0 auto;
+    padding-bottom: rhythm(1);
     position: relative;
-    padding: 0 70px; // Make room for back link
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+
+    .select-kb-title {
+      flex: 1 0 auto;
+      margin-bottom: 0;
+      text-align: center;
+    }
+
+    .select-kb-back,
+    .manage-account-button {
+      bottom: rhythm(0.5);
+      position: absolute;
+    }
+
+    .select-kb-back {
+      left: 0;
+
+      & ::ng-deep .pa-button {
+        padding: rhythm(0.5) rhythm(1) rhythm(0.5) 0;
+      }
+    }
+
+    .manage-account-button {
+      right: 0;
+    }
   }
 
-  &-back {
-    position: absolute;
-    top: 8px;
-    left: 0;
-    font-size: var(--stf-font-size-ssmall);
-    font-weight: var(--stf-font-weight-semibold);
-    color: inherit;
-  }
-
-  app-button-action {
-    position: absolute;
-    right: 0;
-    top: -3px;
-  }
-
-  h2 {
-    margin: 0 0 14px 0;
-    font-weight: var(--stf-font-weight-bold);
-    text-align: center;
-    @include text-truncate();
-  }
-
-  &-body {
+  .select-kb-body {
+    flex: 1 0 auto;
     overflow-y: auto;
     overflow-x: hidden;
     // Move scrollbar to the edge
-    padding-left: 100px;
-    padding-right: 100px;
-    margin: 0 -100px;
+    padding-left: rhythm(12);
+    padding-right: rhythm(12);
+    margin: 0 -#{rhythm(12)};
     @include scrollbar-black();
   }
 
-  &-footer {
-    margin-top: 24px;
+  .select-kb-footer {
+    display: flex;
+    gap: rhythm(2);
+    justify-content: center;
+    margin-top: rhythm(3);
   }
 
   .kb {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 42px;
     align-items: center;
-    justify-content: center;
+    border-bottom: 1px solid $color-border-menu-separator;
     color: inherit;
+    display: flex;
+    height: rhythm(5);
+    justify-content: center;
+    position: relative;
     text-decoration: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-    &-arrow {
+    transition: background-color $transition-hint;
+    width: 100%;
+
+    &:hover {
+      background-color: $color-background-menu-option-hover;
+    }
+
+    pa-icon {
       position: absolute;
       top: 50%;
-      right: 15px;
+      right: rhythm(1.5);
       transform: translateY(-50%);
-      svg {
-        width: 12px;
-        height: auto;
-        display: block;
-      }
     }
   }
 
-  &-empty {
+  .select-kb-empty {
     text-align: center;
-    &-message {
-      margin-top: 48px;
+    .select-kb-empty-message {
+      margin-top: rhythm(6);
       font-style: italic;
     }
-    stf-button {
-      margin-top: 22px;
+    pa-button {
+      margin-top: rhythm(3);
     }
   }
 
-  &-input {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-    input {
-      font-family: inherit;
-      background-color: #fff;
-      border: 0;
-      display: block;
-      width: 100%;
-      height: 42px;
-      text-align: center;
-      &::placeholder {
-        color: var(--stf-gray-lighter-3);
-      }
-    }
+  .select-kb-input {
+    padding: rhythm(2) 0;
+
   }
   &-error {
     margin-top: 12px;
