--- a/apps/dashboard/src/app/select/select.component.html
+++ b/apps/dashboard/src/app/select/select.component.html
@@ -1,38 +1,28 @@
 <div class="select"
      *ngIf="accounts && kbs">
-  <div class="select-container"
-       fxLayout="column"
-       fxFlex="0 0 auto">
+  <div class="select-container">
     <div class="logo">
-      <img src="assets/logos/logo_text.svg" />
+      <img src="assets/logos/logo_text.svg" alt="Nuclia"/>
     </div>
     <div class="select-content"
-         fxFlex="1 1 0"
          [@slideInOut]="selectKb">
       <div class="select-account"
-           *ngIf="!selectKb"
-           fxLayout="column">
-        <div class="select-account-list"
-             fxFlex="1 1 0">
+           *ngIf="!selectKb">
+        <div class="select-account-list">
           <div class="select-account-item"
                *ngFor="let account of accounts">
             <a class="account"
                [routerLink]="getAccountUrl(account.slug)">
               {{ account.title }}
-              <svg-icon class="select-account-arrow"
-                        src="assets/icons/chevron-right.svg"> </svg-icon>
+              <pa-icon class="account-arrow" name="chevron-right" size="small"></pa-icon>
             </a>
           </div>
         </div>
-        <div class="select-account-footer"
-             fxFlex="0 0 auto"
-             fxLayout="row"
-             fxLayoutAlign="center center">
-          <stf-button color="gray"
-                      minWidth="175px"
-                      (click)="logout()">
+        <div class="select-account-footer">
+          <pa-button kind="inverted"
+                     (click)="logout()">
             {{ 'user.logout' | translate }}
-          </stf-button>
+          </pa-button>
         </div>
       </div>
       <router-outlet></router-outlet>
