--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -64,8 +64,8 @@ stf-section-navbar-body {
 stf-section-navbar-header {
   .back-button {
     position: absolute;
-    top: rythm(1.5);
-    left: 4px;
+    top: rhythm(2);
+    left: rhythm(2);
   }
 
   h1 {
